.provarCaches/00D6C0000000xA6UAI/objects/Associated_Orders__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Associated Orders</relationshipLabel>
        <relationshipName>Associated_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <formula>TEXT (Order__r.ccrz__OrderNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <formula>Text( Order__r.ccrz__OrderStatus__c )</formula>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Associated Orders</relationshipLabel>
        <relationshipName>Associated_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <formula>Order__r.ccrz__PaymentMethod__c</formula>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <label>Associated Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AO - {00000000}</displayFormat>
        <label>Associated Orders #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>